k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsu-demo
  labels:
    app: devsu-demo-nodejs
