k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-svc
  namespace: devsu-demo
  labels:
    app: devsu-demo-nodejs
spec:
  type: ClusterIP
  selector:
    app: devsu-demo-nodejs
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
